2005-05-13  Bas Wijnen  <shevek@fmf.nl>

	* examples/Makefile, examples/hello.asm, headers/msx-bios.asm,
	headers/msx2-bios.asm, headers/msx2+-bios.asm,
	headers/msxturbor-bios.asm: New files.
	* z80asm.c (struct includedir, firstincludedir, open_include_file,
	add_include, parse_commandline, assemble, main): Use include path.
	* z80asm (parse_commandline): Make stderr default for list and label
	files.
	* z80asm.c (enum mnemonic, mnemonics, get_include_name, assemble): Add
	bininclude directive.
	* z80asm.c (printerr, assemble): Make error output parsable.
	* z80asm.1: Updated.

2005-05-11  Bas Wijnen  <shevek@fmf.nl>

	* Makefile (top level, dist): Use versions instead of dates.
	* VERSION: New file.
	* BUGS, NEWS, README: Removed.

2005-05-10  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.1: New file.
	* z80asm.c (enum mnemonic, mnemonic, assemble): Support END directive.
	* z80asm.c (compare, indx, readlabel): Use strncasecmp instead of
	compare.
	* z80asm.c (assemble): Fix bug with strings in DEFB.
	* z80asm.c (assemble): Allow backslash-escapes in DEFB strings.
	* z80asm.c (rd_character): Allow octal escapes in strings.

2005-03-11  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.c (rd_r): Fixed index prefix.
	* z80asm.c (assemble): Fixed register count errors.

2004-10-01  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm (rd_comma): Fixed possible buffer overflow.
	* z80asm (parse_commandline): Improved --help output.
	* z80asm (new_reference): Removed useless ++.
	* z80asm (wrt_ref, assemble): Improved list output for ds.

2004-10-01  H. Peter Anvin  <hpa@users.sourceforge.net>

	* z80asm.c (enum mnemonic, mnemonics, assemble): Added dm/defm as an
	alias for db/defb.
	* README: Updated documentation accordingly.
	* z80asm.c (write_one_byte, wrtb, new_reference, wrt_ref, assemble):
	Fixed bug regarding addr increments.

2004-09-29  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: added global variable labelprefix.